# TestBadge

./: README.md  sonar-project.properties
.github/workflows/: build.yml  test.yml
BadgeProject/: CMakeLists.txt  build.sh  test.sh
BadgeProject/TestP/: CMakeLists.txt  tst_cal_test.cpp
BadgeProject/production/: CMakeLists.txt  Calc.cpp  Calc.h  main.cpp
